feat: create blink crud
